--- a/Presentation/Visualization/index.html
+++ b/Presentation/Visualization/index.html
@@ -110,6 +110,7 @@
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML"></script>
     <script defer src="js/materialize.min.js"></script>
     <script defer src="js/jquery-3.3.1.min.js"></script>
+    <script defer src="js/jquery-ui.min.js"></script>
     <script defer src="js/stats.min.js"></script>
     <script defer src="js/three.js"></script>
     <script defer src="js/graph.js"></script>
@@ -117,7 +118,9 @@
     <script defer src="js/settings.js"></script>
     <script defer src="js/controls/DeviceOrientationControls.js"></script>
     <script defer src="js/controls/OrbitControls.js"></script>
-    <script defer src="js/jquery-ui.min.js"></script>
+    <script defer src="js/Sky.js"></script>
+    <script defer src="js/Water.js"></script>
+    <script defer src="js/dat.gui.min.js"></script>
     <script defer src="js/general.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
     <script defer src="js/deobfuscate.js"></script>
