transparent menu button, more elegent but difficult to notice

--- a/Presentation/Visualization/index.html
+++ b/Presentation/Visualization/index.html
@@ -132,7 +132,7 @@
 
 <body>
     <div id="controls" class="fixed-action-btn toolbar direction-top">
-        <a class="btn-floating btn-large waves-effect waves-light pulse" onclick="$(this).removeClass('pulse');">
+        <a class="btn-floating btn-large waves-effect waves-light pulse" style="background: transparent !important; box-shadow: none !important;" onclick="$(this).removeClass('pulse');">
             <i class="large material-icons">menu</i>
         </a>
         <ul>
