great ambient reflections, without lights

--- a/Presentation/Visualization/index.html
+++ b/Presentation/Visualization/index.html
@@ -393,7 +393,7 @@
                 <br>
                 <br>
                 <label>
-                    <input type="checkbox" class="filled-in" checked id="automaton-lights" />
+                    <input type="checkbox" class="filled-in" id="automaton-lights" />
                     <span>Enable lights</span>
                 </label>
             </div>
