--- a/Presentation/Visualization/index.html
+++ b/Presentation/Visualization/index.html
@@ -143,7 +143,7 @@
 </head>
 
 <body>
-    <div id="vignette"></div>
+    <!-- <div id="vignette"></div> -->
     <div id="controls" class="fixed-action-btn toolbar direction-top">
         <a class="btn-floating btn-large waves-effect waves-light pulse" style="background: transparent !important; box-shadow: none !important;"
             onclick="$(this).removeClass('pulse');">
