--- a/Presentation/Visualization/index.html
+++ b/Presentation/Visualization/index.html
@@ -455,6 +455,15 @@
                     </label>
                 </p>
             </div>
+            
+            <div class="divider"></div>
+
+            <div class="section">
+                <label>Daytime</label>
+                <p class="range-field">
+                    <input type="range" id="daytime" min="0" max="1" value="0.15" step="0.01" />
+                </p>
+            </div>
 
             <div class="divider"></div>
 
