lowered poster-camera text (closer to ocean), increased the quality level of animation, fixed faculty logo vs ocean issue

--- a/CoreServer/wwwroot/index.html
+++ b/CoreServer/wwwroot/index.html
@@ -414,13 +414,19 @@
             <div class="section">
                 <p>
                     <label>
-                        <input name="group1" type="radio" id="quality-ultra" class="with-gap" />
+                        <input name="group1" type="radio" id="quality-smooth" class="with-gap" />
+                        <span>Realistically smooth</span>
+                    </label>
+                </p>
+                <p>
+                    <label>
+                        <input name="group1" type="radio" id="quality-ultra" checked class="with-gap" />
                         <span>Ultra Quality</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input name="group1" type="radio" id="quality-standard" checked class="with-gap" />
+                        <input name="group1" type="radio" id="quality-standard" class="with-gap" />
                         <span>Standard Quality</span>
                     </label>
                 </p>
