--- a/CoreServer/wwwroot/index.html
+++ b/CoreServer/wwwroot/index.html
@@ -94,6 +94,10 @@
             background-size: cover;
             z-index: 1;
         }
+
+        audio {
+            display: none !important;
+        }
     </style>
     <link rel="icon" href="icons/IconAlternative2clearSmall.jpg">
     <!-- Compiled and minified CSS -->
@@ -138,6 +142,10 @@
 
 <body style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;"
     unselectable="on" onselectstart="return false;">
+    <audio id="audio-music" src="https://r5---sn-f5f7lnee.googlevideo.com/videoplayback?id=o-AHWYaxKRx1yl2ssOE_BZE9xEc-WDSnfbuboVLKe8gnsh&expire=1546656909&mt=1546635225&requiressl=yes&sparams=dur%2Cei%2Cid%2Cinitcwndbps%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Crequiressl%2Csource%2Cexpire&c=WEB&key=yt6&signature=552E2866EB11C0D948594BD46BF66423F731663C.13D3602EAFFFC08A0344C1456906E9B2529C8875&mime=video%2Fmp4&initcwndbps=1191250&ipbits=0&mn=sn-f5f7lnee%2Csn-4g5e6nze&mm=31%2C26&ms=au%2Conr&fvip=5&ratebypass=yes&ei=LcgvXKWGE9ip8gP3g6SIBA&mv=m&source=youtube&pl=33&itag=22&dur=25206.143&txp=2311222&lmt=1535409215708477&ip=2a02%3Aa311%3Aa247%3Ade80%3Af5a5%3Afe70%3Aeaff%3Af140"
+        controls></audio>
+    <audio id="audio-sfx" src="https://r1---sn-f5f7lne6.googlevideo.com/videoplayback?id=o-AJtEU8oZFrt6SZcYRfZzDipwkVzy9_Zlz8u5IYsdZTpQ&ipbits=0&ms=au%2Conr&mt=1546635313&mv=m&ei=psgvXPipKZeE1gLo64HQAQ&initcwndbps=1137500&expire=1546657030&signature=AAC928A19EC3985E8D65D8F7DF8976B3FF863669.0EC525C18A4F1CF4308601578BB113F2E3D988DA&ip=2a02%3Aa311%3Aa247%3Ade80%3Af5a5%3Afe70%3Aeaff%3Af140&mime=video%2Fmp4&fvip=1&txp=5431432&mm=31%2C26&mn=sn-f5f7lne6%2Csn-4g5ednsl&ratebypass=yes&dur=12968.483&itag=22&pl=33&source=youtube&sparams=dur%2Cei%2Cid%2Cinitcwndbps%2Cip%2Cipbits%2Citag%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Cratebypass%2Crequiressl%2Csource%2Cexpire&c=WEB&requiressl=yes&lmt=1540945020213956&key=yt6"
+        controls volume=0></audio>
     <!-- <div id="vignette"></div> -->
     <div id="controls" class="fixed-action-btn toolbar direction-top">
         <a class="btn-floating btn-large waves-effect waves-light pulse" style="background: transparent !important; box-shadow: none !important;"
