--- a/CoreServer/wwwroot/index.html
+++ b/CoreServer/wwwroot/index.html
@@ -129,7 +129,7 @@
     <script defer src="js/jquery-3.3.1.min.js"></script>
     <script defer src="js/jquery-ui.min.js"></script>
     <script defer src="js/stats.min.js"></script>
-    <script defer src="js/three.js"></script>
+    <script defer src="js/three100.js"></script>
     <script defer src="js/graph.js"></script>
     <script defer src="js/animatable.js"></script>
     <script defer src="js/settings.js"></script>
