disabled reflections by default

--- a/CoreServer/wwwroot/index.html
+++ b/CoreServer/wwwroot/index.html
@@ -375,6 +375,18 @@
         <div class="modal-content">
 
             <div class="section">
+                <label>Animate reflections visible on automaton states</label>
+                <br>
+                <br>
+                <label>
+                    <input type="checkbox" class="filled-in" id="automaton-reflection" />
+                    <span>Reflections</span>
+                </label>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="section">
                 <label>Toggle lights coming from vertices (requires automaton reconstruction)</label>
                 <br>
                 <br>
