--- a/CoreServer/wwwroot/index.html
+++ b/CoreServer/wwwroot/index.html
@@ -375,13 +375,10 @@
         <div class="modal-content">
 
             <div class="section">
-                <label>Animate reflections visible on automaton states</label>
-                <br>
-                <br>
-                <label>
-                    <input type="checkbox" class="filled-in" id="automaton-reflection" />
-                    <span>Reflections</span>
-                </label>
+                <label>Reflection probability of a valid random vertex per frame</label>
+                <p class="range-field">
+                    <input type="range" id="probability" min="0" max="1" value="0.1" step="0.01" />
+                </p>
             </div>
 
             <div class="divider"></div>
