Updated poster title, added icon

--- a/CoreServer/wwwroot/index.html
+++ b/CoreServer/wwwroot/index.html
@@ -99,7 +99,7 @@
             display: none !important;
         }
     </style>
-    <link rel="icon" href="icons/IconAlternative2clearSmall.jpg">
+    <link rel="icon" href="icons/icon-small.jpg">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
