--- a/CoreServer/wwwroot/index.html
+++ b/CoreServer/wwwroot/index.html
@@ -127,7 +127,7 @@
           -webkit-font-smoothing: antialiased;
         }
     </style>
-    <script type="text/javascript" async src="js/MathJax-2.7.5/latest.js?config=TeX-MML-AM_CHTML"></script>
+    <script type="text/javascript" async src="js/MathJax/latest.js?config=TeX-MML-AM_CHTML"></script>
     <script defer src="js/materialize.min.js"></script>
     <script defer src="js/jquery-3.3.1.min.js"></script>
     <script defer src="js/jquery-ui.min.js"></script>
