--- a/CoreServer/wwwroot/index.html
+++ b/CoreServer/wwwroot/index.html
@@ -431,13 +431,13 @@
                 </p>
                 <p>
                     <label>
-                        <input name="group1" type="radio" id="quality-ultra" checked class="with-gap" />
+                        <input name="group1" type="radio" id="quality-ultra" class="with-gap" />
                         <span>Ultra Quality</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input name="group1" type="radio" id="quality-standard" class="with-gap" />
+                        <input name="group1" type="radio" id="quality-standard" checked class="with-gap" />
                         <span>Standard Quality</span>
                     </label>
                 </p>
