--- a/CoreServer/wwwroot/index.html
+++ b/CoreServer/wwwroot/index.html
@@ -124,6 +124,7 @@
           word-wrap: normal;
           direction: ltr;
           -webkit-font-feature-settings: 'liga';
+          font-feature-settings: 'liga';
           -webkit-font-smoothing: antialiased;
         }
     </style>
