changed string target length

--- a/Copied-ready-to-run-win-x64/Server/wwwroot/index.html
+++ b/Copied-ready-to-run-win-x64/Server/wwwroot/index.html
@@ -501,9 +501,9 @@
 
             <div class="divider"></div>
             <div class="section">
-                <label>Target length of strings</label>
+                <label>Target string length</label>
                 <p class="range-field">
-                    <input type="range" id="string-length" min="0" max="3" value="0.618" step="0.001" />
+                    <input type="range" id="string-length" min="0" max="3" value="0.4" step="0.001" />
                 </p>
             </div>
 
