--- a/CoreServer/wwwroot/index.html
+++ b/CoreServer/wwwroot/index.html
@@ -178,7 +178,7 @@
                     <i class="material-icons" id="innerText">portable_wifi_off</i>
                 </a>
             </li>
-            <li class="waves-effect waves-light" id="zoomin">
+            <!-- <li class="waves-effect waves-light" id="zoomin">
                 <a>
                     <i class="material-icons">zoom_in</i>
                 </a>
@@ -187,7 +187,7 @@
                 <a>
                     <i class="material-icons">zoom_out</i>
                 </a>
-            </li>
+            </li> -->
             <li class="waves-effect waves-light" id="animate-shortest-path">
                 <a>
                     <i class="material-icons">play_arrow</i>
