Added support for usual automata

--- a/CoreServer/wwwroot/index.html
+++ b/CoreServer/wwwroot/index.html
@@ -213,6 +213,14 @@
                     <i class="material-icons">exposure_plus_1</i>
                 </a>
             </li>
+            <li class="waves-effect waves-light">
+                <a id="showPowerGraph">
+                    \(2^n\)
+                </a>
+                <a id="showNormalNotPowerGraph">
+                    \(n\)
+                </a>
+            </li>
         </ul>
 
     </div>
