--- a/Copied-ready-to-run-win-x64/Server/wwwroot/index.html
+++ b/Copied-ready-to-run-win-x64/Server/wwwroot/index.html
@@ -178,7 +178,7 @@
                     <i class="material-icons" id="innerText">portable_wifi_off</i>
                 </a>
             </li>
-            <li class="waves-effect waves-light" id="zoomin">
+            <!-- <li class="waves-effect waves-light" id="zoomin">
                 <a>
                     <i class="material-icons">zoom_in</i>
                 </a>
@@ -187,7 +187,7 @@
                 <a>
                     <i class="material-icons">zoom_out</i>
                 </a>
-            </li>
+            </li> -->
             <li class="waves-effect waves-light" id="animate-shortest-path">
                 <a>
                     <i class="material-icons">play_arrow</i>
@@ -208,9 +208,17 @@
                     <i class="material-icons">exposure_neg_1</i>
                 </a>
             </li>
-            <li class="waves-effect waves-light">
-                <a id="animateForward">
+            <li class="waves-effect waves-light" id="animateForward">
+                <a>
                     <i class="material-icons">exposure_plus_1</i>
+                </a>
+            </li>
+            <li class="waves-effect waves-light">
+                <a id="showPowerGraph">
+                    \(2^n\)
+                </a>
+                <a id="showNormalNotPowerGraph">
+                    \(n\)
                 </a>
             </li>
         </ul>
