--- a/CoreServer/wwwroot/index.html
+++ b/CoreServer/wwwroot/index.html
@@ -208,8 +208,8 @@
                     <i class="material-icons">exposure_neg_1</i>
                 </a>
             </li>
-            <li class="waves-effect waves-light">
-                <a id="animateForward">
+            <li class="waves-effect waves-light" id="animateForward">
+                <a>
                     <i class="material-icons">exposure_plus_1</i>
                 </a>
             </li>
